--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,8 @@
 {
   "_comment": "This file contains a list of financial instruments. Each object has 'id', 'symbol', and 'depth'.",
   "instruments": [
-    { "id": 1, "symbol": "AAPL", "depth": 5 },
-    { "id": 2, "symbol": "GOOGL", "depth": 5 }
+    { "id": 1, "symbol": "AAPL", "depth": 10 },
+    { "id": 2, "symbol": "GOOGL", "depth": 15 },
+    { "id": 3, "symbol": "MSFT", "depth": 20 }
   ]
 }
